--- a/journal/202007.md
+++ b/journal/202007.md
@@ -12,7 +12,15 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
 
-[dcrd](https://github.com/decred/dcrd): {}
+[dcrd](https://github.com/decred/dcrd):
+
+In progress:
+
+- devs decided to use Schnorr signatures on TSPEND transactions
+  - https://twitter.com/marco_peereboom/status/1283168367856300037
+  - https://github.com/decred/dcrd/pull/2170/commits/00c922ae13ce074dfd9050e2698dd1e5451c2f69
+    - { note that commit link may change if rebased }
+  - { get as much as possible, why, how }
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
@@ -20,7 +28,9 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 
 [Decrediton](https://github.com/decred/decrediton): {}
 
-[Politeia](https://github.com/decred/politeia): {}
+[Politeia](https://github.com/decred/politeia):
+
+Multiple new [features](https://twitter.com/lukebp_/status/1285955294703411201) have been deployed to the [proposals.decred.org](https://proposals.decred.org/) site: RFP process, flat display of comments (helps to quickly spot new comments without hunting them down in the thread), dark mode, short proposal URLs, and a switch to block commenting once a day instead of once an hour (workaround for a limitation that will be fixed with the migration to the tlog backend).
 
 [vspd](https://github.com/decred/vspd): {}
 
@@ -32,7 +42,10 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 
 [cspp](https://github.com/decred/cspp): {}
 
-[dcrdex](https://github.com/decred/dcrdex): {}
+[dcrdex](https://github.com/decred/dcrdex):
+
+- smart fees https://github.com/decred/dcrdex/pull/505
+  - https://twitter.com/chappjc/status/1280510447515586565
 
 [dcrandroid](https://github.com/planetdecred/dcrandroid): {}
 
@@ -83,6 +96,8 @@ In July the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDc
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
+Check Politeia Digest [issue 33](https://blockcommons.red/politeia-digest/issue033/) for more details.
+
 ## Network
 
 { hint:
@@ -114,7 +129,7 @@ Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 { hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
 
-
+- DCR/BUSD https://www.binance.com/en/support/articles/fee761e58d684bc3a1c7fc11660ab596
 - Binance is about to launch a staking service similar to Kucoin for their Decred users. https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw
 
 { check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
@@ -132,6 +147,10 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 ## Outreach
 
 {overview of outreach/communications/marketing/PR activity for past month and any short-term plans}
+
+{ might be PR work: }
+
+- https://www.forbes.com/sites/cbovaird/2020/07/08/bitcoin-volatility-reached-lowest-since-february-last-month/
 
 ## Events
 
@@ -155,19 +174,20 @@ Upcoming:
 
 Selected articles:
 
-- {}
+- The Federal Reserve: A Blatantly Rigged Game by @jy-p ([blog.decred.org](https://blog.decred.org/2020/07/01/The-Federal-Reserve-A-Blatantly-Rigged-Game/)) - triggered a [debate](https://twitter.com/behindtext/status/1278424658962984962) on Twitter and a [discussion](https://www.reddit.com/r/decred/comments/hjsgg1/the_federal_reserve_a_blatantly_rigged_game/) of the history of money
+- Decred On-Chain Mini Pub 1: Relative MVRV Ratio by @PermabullNino ([medium](https://medium.com/@permabullnino/decred-on-chain-mini-pub-1-relative-mvrv-ratio-ea2564ca420f))
 
 Translations:
 
-- {}
+- Why we need Decred: An inclusive approach to sound money - [in Spanish](https://medium.com/decred-es/porque-decred-es-necesario-un-enfoque-inclusivo-sobre-el-dinero-duradero-b8235fb312f3) by @adcade
 
 Videos:
 
-- {}
+- Decred bi-Weekly News Update - July 13th, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=yqI5R_WthT4))
 
 Audio:
 
-- {}
+- Decred in Depth {} - DCR Round Up ([soundcloud](https://soundcloud.com/decredindepth/dcr-round-up-with-checkmate-1)) - @Checkmate and @PermabullNino talk shop about Decred fundamentals, the rigged economic system, inspired by @jy-p's piece on the topic and update the community on the progress of their individual proposals.
 
 ## Community Discussions
 
@@ -194,6 +214,8 @@ Selected Twitter discussions:
 In July DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
+
+@PermabullNino [explored](https://medium.com/@permabullnino/decred-on-chain-mini-pub-1-relative-mvrv-ratio-ea2564ca420f) several new metrics derived from BTC and DCR realized caps that can reflect holder psychology and market over-/under-valuation.
 
 ## Relevant External
 
