--- a/journal/202007.md
+++ b/journal/202007.md
@@ -8,11 +8,24 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 ## Development
 
-{ hint: add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
-
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
 
 [dcrd](https://github.com/decred/dcrd):
+
+- further extended test coverage of the `rpcserver` package
+- [exported](https://github.com/decred/dcrd/pull/2243) several `txscript` functions that are independently useful to make the Treasury PR a bit smaller
+- [exported](https://github.com/decred/dcrd/pull/2240) various consensus functions and types as a step to remove all non-consensus code out of the `txscript` package
+- field normalization code [hardened](https://github.com/decred/dcrd/pull/2258) against the possibility of non-constant time operations due to branch prediction (primarily based on a [pull request](https://github.com/btcsuite/btcd/pull/1084) to btcd from 2017). The PR demonstrates a way of detecting non-constant time behavior by looking at the assembly output.
+- added handling of [`notfound`](https://github.com/decred/dcrd/pull/2253) peer message (increase peer's ban score and stop requesting blocks and transactions that were not found by it) { did I read it right? }
+- mining code [moved](https://github.com/decred/dcrd/pull/1965) into `mining` package
+- [`mempool`](https://github.com/decred/dcrd/pull/2274), [`mining`](https://github.com/decred/dcrd/pull/2275) and [`fees`](https://github.com/decred/dcrd/pull/2287) converted from exported modules to internal packages to reduce the maintenance burden. This is part of the overall effort to reduce the total number of modules and eventually get to the point that it will be possible to follow semver for the root module.
+- `rpcserver` code [moved](https://github.com/decred/dcrd/pull/2288) from the main module to a standalone internal package
+- `cpuminer` [refactored](https://github.com/decred/dcrd/pull/2276) into its own package to improve testability and facilitate reuse
+- `cpuminer` [reworked](https://github.com/decred/dcrd/pull/2277) to use the background block template generator to simplify testing with simulation test networks
+
+{ summary of module movements }
+
+{ code/contributor stats maybe? }
 
 In progress:
 
