--- a/journal/202007.md
+++ b/journal/202007.md
@@ -56,13 +56,24 @@ In progress:
 
 [Politeia](https://github.com/decred/politeia):
 
+- backend request for reviewing [spending](https://github.com/decred/politeia/pull/1224) of approved proposals
+- command-line [utility](https://github.com/decred/politeia/pull/1240) to test the RFP process
+- [searching](https://github.com/decred/politeiagui/pull/2033) contractors by domain or type for the CMS admin
+- display proposal [names](https://github.com/decred/politeiagui/pull/2041) instead of tokens in CMS invoice line items
+- GUI support for assigning proposal [ownership](https://github.com/decred/politeiagui/pull/2055)
+- improved test coverage
+- bug fixes
+
 Multiple new [features](https://twitter.com/lukebp_/status/1285955294703411201) have been deployed to the [proposals.decred.org](https://proposals.decred.org/) site: RFP process, flat display of comments (helps to quickly spot new comments without hunting them down in the thread), dark mode, short proposal URLs, and a switch to block commenting once a day instead of once an hour (workaround for a limitation that will be fixed with the migration to the tlog backend).
 
-[vspd](https://github.com/decred/vspd): {}
+[vspd](https://github.com/decred/vspd):
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): {}
+- admin table showing the [status](https://github.com/decred/vspd/pull/149) of each voting wallet
+- API versioning and a few bug fixes
 
-[dcrpool](https://github.com/decred/dcrpool): {}
+[dcrstakepool](https://github.com/decred/dcrstakepool): { none as of 26 }
+
+[dcrpool](https://github.com/decred/dcrpool): { none as of 26 }
 
 [dcrlnd](https://github.com/decred/dcrlnd): {}
 
