Dev finish till 26

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -97,21 +97,38 @@ Multiple new [features](https://twitter.com/lukebp_/status/1285955294703411201) 
 - added [nomatch](https://github.com/decred/dcrdex/pull/535) notification { how does it work? notable for end users? }
 - multiple bug fixes and testing improvements
 
-[dcrandroid](https://github.com/planetdecred/dcrandroid): {}
+[dcrandroid](https://github.com/planetdecred/dcrandroid):
 
-[dcrios](https://github.com/planetdecred/dcrios): {}
+- updated French translation
+- bug fixes
+- several bug fixes in the base [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet/pulls?q=is%3Apr+merged%3A2020-07-01..2020-07-26+sort%3Aupdated-asc) library
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+[dcrios](https://github.com/planetdecred/dcrios): { none as of 26 }
 
-[tinydecred](https://github.com/decred/tinydecred): {}
+[godcr](https://github.com/planetdecred/godcr):
 
-[docs](https://github.com/decred/dcrdocs): {}
+godcr is an upcoming cross-platform pure-Go desktop SPV wallet for Decred. See [June](202006.md#development) for the introduction.
 
-[decred.org](https://github.com/decred/dcrweb): {}
+- [sync status](https://github.com/planetdecred/godcr/pull/170) element on the overview page
+- updated to newer [Gio](https://github.com/planetdecred/godcr/pull/186) UI library
+- removed hardcoded [dimensions](https://github.com/planetdecred/godcr/pull/173) from all pages
+- UI tweaks and fixes
+
+[dcrdata](https://github.com/decred/dcrdata): { none as of 26 }
+
+[tinydecred](https://github.com/decred/tinydecred): { none as of 26 }
+
+[docs](https://github.com/decred/dcrdocs): { none significant as of 26 }
+
+[decred.org](https://github.com/decred/dcrweb):
+
+- notable articles added to [Press](https://decred.org/press/) page
+- Lottie animations [added](https://github.com/decred/dcrweb/pull/892) to History page
 
 Other:
 
-- {smaller items go here}
+- [decredpower.com](https://decredpower.com/) migrated to [Hugo](https://github.com/planetdecred/decredpower/pull/19) which is more flexible and easier to update. It also features a fresh new theme (don't worry, [retro](https://decredpower.com/retro/) theme is still there!).
+- { shall we mention dcrextdata update @raedah? }
 
 Dev activity stats for July: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
 
