Dev vspd last change

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -71,6 +71,10 @@ Multiple new [features](https://twitter.com/lukebp_/status/1285955294703411201) 
 - admin table showing the [status](https://github.com/decred/vspd/pull/149) of each voting wallet
 - API versioning and a few bug fixes
 
+In progress:
+
+- last major change before the release: https://twitter.com/JamieHoldstock/status/1288030715486056448
+
 { anything to add? }
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): { none as of 26 }
