--- a/journal/202007.md
+++ b/journal/202007.md
@@ -276,6 +276,12 @@ Comm systems news:
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
+The subject of marketing saw considerable discussion on reddit and Matrix. and specifically what role the Treasury of a decentralized project like Decred should play in this.
+
+
+
+
+
 Selected Reddit posts:
 
 - {}
@@ -283,6 +289,7 @@ Selected Reddit posts:
 Selected Twitter discussions:
 
 - https://twitter.com/decredcitizen/status/1283145371317940229 { new interesting twitter account }
+- @chappjc [asks](https://twitter.com/chappjc/status/1288167672849596417) whether an open source non-rent-seeking decentralized exchange counts as DeFi?
 
 ## Markets
 
@@ -291,6 +298,10 @@ In July DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
 @PermabullNino [explored](https://medium.com/@permabullnino/decred-on-chain-mini-pub-1-relative-mvrv-ratio-ea2564ca420f) several new metrics derived from BTC and DCR realized caps that can reflect holder psychology and market over-/under-valuation.
+
+Binance [opened](https://www.reddit.com/r/decred/comments/i0gk1i/dcrusdt_on_binance/) a DCR/USDT market.
+
+
 
 ## Relevant External
 
