--- a/journal/202007.md
+++ b/journal/202007.md
@@ -75,7 +75,7 @@ If you have some idle hardware, you can help by [fuzz testing](https://github.co
 - improved test coverage
 - bug fixes
 
-Multiple new [features](https://twitter.com/lukebp_/status/1285955294703411201) have been deployed to the [proposals.decred.org](https://proposals.decred.org/) site: RFP process, flat display of comments (helps to quickly spot new comments without hunting them down in the thread), dark mode, short proposal URLs, and a switch to block commenting once a day instead of once an hour (workaround for a limitation that will be fixed with the migration to the tlog backend).
+Multiple new [features](https://twitter.com/lukebp_/status/1285955294703411201) have been deployed to the [proposals.decred.org](https://proposals.decred.org/) site: RFP process, flat display of comments (helps to quickly spot new comments without hunting them down in the thread), dark mode, short proposal URLs, and a switch to restrict posting comments once a day instead of once an hour (workaround for a limitation that will be fixed with the migration to the tlog backend).
 
 CMS:
 
