--- a/journal/202007.md
+++ b/journal/202007.md
@@ -175,7 +175,7 @@ In July the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDc
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
 - { does Monde PR prop have the highest support across the marketing domain so far? }
-- { looks like we have the first ever comments censored here, might want to comment https://proposals.decred.org/proposals/32cba00 }
+- { looks like we have the first ever comments censored here, might want to comment https://proposals.decred.org/proposals/32cba00 rr: the purpose of censoring was to decrease visibility, pointing it out seems counterproductive }
 
 Check Politeia Digest [issue 33](https://blockcommons.red/politeia-digest/issue033/) for more details.
 
@@ -238,6 +238,18 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 - https://www.forbes.com/sites/cbovaird/2020/07/08/bitcoin-volatility-reached-lowest-since-february-last-month/
 
+The subject of marketing saw considerable discussion on reddit and Matrix. and specifically what role the Treasury of a decentralized project like Decred should play in this.
+
+@checkmate has been stirring the pot of grassroots outreach and other ideas on reddit, with regular and irregular posts provoking discussion that has also spilled over into some other marketing-related discussion posts. This month's outreach braindroplets:
+
+* @mrbulb posted a Workshop Wednesday, inviting people to explore the 4 key stages of narrative development with him.
+* Skepticism Sunday 5 July considered hardware wallets and staking, @jy-p [knows](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx38dq3?utm_source=share&utm_medium=web2x) a new dev who is into this kind of thing. This edition also featured an epic [ragequit](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx2xh21) from an airdrop participant who bounced between DCR and XMR over the years, started staking in 2019 but is now done. Comes with: [itemized](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx3f3wo) [debunking](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx3fcd6) by @bee.
+* FTF Jul 10 had [discussion](https://www.reddit.com/r/decred/comments/homdwc/forward_thinking_friday_10_july_2020/) about bringing dcr data to life for more people and showing off Decred's interesting and immaculately presented chain, plus rappers, graffiti and some skepticism that was shared on the wrong day.
+* FTF Jul 17 on the subject of [differentiators](https://www.reddit.com/r/decred/comments/ht4r8a/forward_thinking_friday_differentiators_17_july/), looking at the different ways in which Decred stands out.
+* @Noah shared a braindroplet about a Dapp for transparent governance with Politeia.
+* FTF Jul 24 - Content [amplification](https://www.reddit.com/r/decred/comments/hxblmd/forward_thinking_friday_content_amplification_24/) - cyclical patterns and getting the right messages to the right people.
+* Juiced from Sunday's (lack of) [skepticism](https://www.reddit.com/r/decred/comments/hy4x66/decred_skepticism_sunday_26_july_2020/), on Monday July 27 @checkmate dropped part 2 of the Grassroots Marketing Discussion -  [The Hardest Part](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/). This post set out 3 observations (#1 marketing budgets to date have not performed well, #2 absence of structure and leaders, #3 Treasury creates perverse incentives in marketing). These have struck a chord with many community members (41 comments so far), and even brought Dustorf [back](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzjjg0s) into the mix to share his perspective, and led to Praxis to [reveal](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzffwfy) his new identity. 
+
 ## Events
 
 Attended:
@@ -262,6 +274,8 @@ Selected articles:
 
 - The Federal Reserve: A Blatantly Rigged Game by @jy-p ([blog.decred.org](https://blog.decred.org/2020/07/01/The-Federal-Reserve-A-Blatantly-Rigged-Game/)) - triggered a [debate](https://twitter.com/behindtext/status/1278424658962984962) on Twitter and a [discussion](https://www.reddit.com/r/decred/comments/hjsgg1/the_federal_reserve_a_blatantly_rigged_game/) of the history of money
 - Decred On-Chain Mini Pub 1: Relative MVRV Ratio by @PermabullNino ([medium](https://medium.com/@permabullnino/decred-on-chain-mini-pub-1-relative-mvrv-ratio-ea2564ca420f))
+- The Decred Node: Back to the Source - Part One ([medium](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c))
+- Decred On-Chain Mini Pub 3: Difficulty Ribbon Price ([medium](https://medium.com/@permabullnino/decred-on-chain-mini-pub-3-difficulty-ribbon-price-d644e470b989))
 
 Translations:
 
@@ -270,7 +284,9 @@ Translations:
 Videos:
 
 - Decred bi-Weekly News Update - July 13th, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=yqI5R_WthT4))
+- Decred bi-Weekly News Update - July 31st 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=SwDH0mIAB_w))
 - Decred Webinar: Sociology, The Future of Work and Incentive Alignment hosted by Decred Australia ([youtube](https://www.youtube.com/watch?v=1dcHwap7xHQ))
+- 
 
 
 
@@ -291,20 +307,6 @@ Comm systems news:
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
-The subject of marketing saw considerable discussion on reddit and Matrix. and specifically what role the Treasury of a decentralized project like Decred should play in this.
-
-@checkmate has been stirring the pot of grassroots outreach and other ideas on reddit, with regular and irregular posts provoking discussion that has also spilled over into some other marketing-related discussion posts. This month's outreach braindroplets:
-
-* @mrbulb posted a Workshop Wednesday, inviting people to explore the 4 key stages of narrative development with him.
-* Skepticism Sunday 5 July considered hardware wallets and staking, @jy-p [knows](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx38dq3?utm_source=share&utm_medium=web2x) a new dev who is into this kind of thing. This edition also featured an epic [ragequit](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx2xh21) from an airdrop participant who bounced between DCR and XMR over the years, started staking in 2019 but is now done. Comes with: [itemized](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx3f3wo) [debunking](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx3fcd6) by @bee.
-* FTF Jul 10 had [discussion](https://www.reddit.com/r/decred/comments/homdwc/forward_thinking_friday_10_july_2020/) about bringing dcr data to life for more people and showing off Decred's interesting and immaculately presented chain, plus rappers, graffiti and some skepticism that was shared on the wrong day.
-* FTF Jul 17 on the subject of [differentiators](https://www.reddit.com/r/decred/comments/ht4r8a/forward_thinking_friday_differentiators_17_july/), looking at the different ways in which Decred stands out.
-* @Noah shared a braindroplet about a Dapp for transparent governance with Politeia.
-* FTF Jul 24 - Content [amplification](https://www.reddit.com/r/decred/comments/hxblmd/forward_thinking_friday_content_amplification_24/) - cyclical patterns and getting the right messages to the right people.
-* Juiced from Sunday's (lack of) [skepticism](https://www.reddit.com/r/decred/comments/hy4x66/decred_skepticism_sunday_26_july_2020/), on Monday July 27 @checkmate dropped part 2 of the Grassroots Marketing Discussion -  [The Hardest Part](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/). This post set out 3 observations (#1 marketing budgets to date have not performed well, #2 absence of structure and leaders, #3 Treasury creates perverse incentives in marketing). These have struck a chord with many community members (41 comments so far), and even brought Dustorf [back](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzjjg0s) into the mix to share his perspective, and led to Praxis to [reveal](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzffwfy) his new identity. 
-
-
-
 Selected Reddit posts:
 
 - @svitekpavel's [butterfly](https://www.reddit.com/r/decred/comments/htdsts/decred_artwork_new_repo_on_github_free_to_use/) DCR graphics repository got some love, it emerged from the [cocoon](https://www.reddit.com/r/decred/comments/ho1x71/dcr_bounty_create_decred_butterfly_svg_and/) of a DCR Bounty post he posted 9 days previously.
@@ -315,6 +317,8 @@ Selected Twitter discussions:
 
 - https://twitter.com/decredcitizen/status/1283145371317940229 { new interesting twitter account }
 - @chappjc [asks](https://twitter.com/chappjc/status/1288167672849596417) whether an open source non-rent-seeking decentralized exchange counts as DeFi?
+- @jholdstock is [back](https://twitter.com/JamieHoldstock/status/1288030715486056448?s=20) on twitter to put out an update on VSPD and call for more testers, @sethsimmons [dives](https://twitter.com/sethisimmons/status/1288189814349664258) in and is up and running on testnet in [doublequick](https://twitter.com/sethisimmons/status/1288554162628833280) time.
+- @pablito [suggests](https://twitter.com/plabarta_/status/1286062208460390401?s=20) that Messari may have missed a DAO.
 
 ## Markets
 
@@ -335,6 +339,13 @@ Binance [opened](https://www.reddit.com/r/decred/comments/i0gk1i/dcrusdt_on_bina
 {governance, funding, chain forks, community forks}
 
 {DEX}
+
+https://medium.com/@tronblack/ravencoin-post-vulnerability-fix-fb3a4bd70b7b
+
+https://www.theblockcrypto.com/post/72200/coinbase-says-it-prevented-over-1000-customers-from-sending-280000-worth-of-bitcoin-to-twitter-hackers
+
+
+https://twitter.com/Ledger/status/1288372785098764288?s=20
 
 {relevant exchanges and websites}
 
