--- a/journal/202007.md
+++ b/journal/202007.md
@@ -147,7 +147,7 @@ Dev activity stats for July: {n} active PRs, {n} master commits, {n}K added and 
 
 Welcome to new first time contributors with code merged to master: @dreacot ([politeia](https://github.com/decred/politeia/commits?author=dreacot)), @Kifen ([dcrwallet](https://github.com/decred/dcrwallet/pull/1520)). The following users contributed via LND upstream work @MrManPew ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=MrManPew)), @elkanatovey ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=elkanatovey)), @turcane ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=turcane)), @yyforyongyu ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=yyforyongyu)).
 
-Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
+Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [@rstaudt2](https://github.com/rstaudt2).
 
 {welcome new corporate contractors with short intros, if any}
 
