--- a/journal/202007.md
+++ b/journal/202007.md
@@ -210,11 +210,15 @@ Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 { hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
 
-- DCR/BUSD https://www.binance.com/en/support/articles/fee761e58d684bc3a1c7fc11660ab596
-- DCR/USDT https://twitter.com/binance/status/1288672185846915072
-- Binance is about to launch a staking service similar to Kucoin for their Decred users. https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw
+- Binance added both [DCR/BUSD](https://www.binance.com/en/support/articles/fee761e58d684bc3a1c7fc11660ab596) and [DCR/USDT](https://www.binance.com/en/support/articles/043fc71cdcce4fcfbdae133d8d0f35aa) pairs within weeks of each other.
 
-{ check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
+- There have been some community rumblings that [Binance](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw) is about to launch a staking service for DCR. On July 31 Binance [announced](https://www.binance.com/en/support/articles/f73f03d86f1a421fb9afce1221baff2e) that they will be adding "cold staking" although no coins have been annouced yet.
+
+- Binance is about to launch a staking service similar to Kucoin for their Decred users. https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw on the rumour side ? Added a releated news (check above)
+
+
+
+
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
