--- a/journal/202007.md
+++ b/journal/202007.md
@@ -318,13 +318,13 @@ Selected Twitter discussions:
 
 ## Markets
 
-In July DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
+In July DCR was trading between USD 13.70-16.28 / BTC 0.00132-0.00177. The average daily rate was $15.13.
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
 @PermabullNino [explored](https://medium.com/@permabullnino/decred-on-chain-mini-pub-1-relative-mvrv-ratio-ea2564ca420f) several new metrics derived from BTC and DCR realized caps that can reflect holder psychology and market over-/under-valuation.
 
-Binance [opened](https://www.reddit.com/r/decred/comments/i0gk1i/dcrusdt_on_binance/) a DCR/USDT market.
+Binance [opened](https://www.reddit.com/r/decred/comments/i0gk1i/dcrusdt_on_binance/) a DCR/USDT market. (Duplicate ? see integrations above) 
 
 
 
