--- a/journal/202007.md
+++ b/journal/202007.md
@@ -172,7 +172,17 @@ Community stats as of {}:
 
 In July the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,050 DCR and spent 16,073 DCR. Using July's daily average DCR/USD rate of $15.13, this is $197K received and $243K spent. At June's average daily rate of $16.05, the USD figure billed for work completed in that month is $258K. As of Aug 1, Treasury balance is 630,766 DCR (10.7 million USD at $16.92).
 
+There were 7 proposals submitted in July:
 
+* The proposal from @Lindsey McConaghey for continuation of PR services at $3,500/month for one year was approved with 90% support (25% turnout), up on the first proposal's 72% approval.
+* [Proposal](https://proposals.decred.org/proposals/dedf452074752d7e29304a0566643feb26d1d130596e04c613e15de113ac2d08) to spend $15,000 creating augmented reality posters.
+* [Proposal](https://proposals.decred.org/proposals/32cba00b8bb0f41689ca8216e2e14a0e3d91a724c83369b3fcda02490dc119f4) to cover moderation of Matrix, Discord, Telegram and Politeia, max $9,000 expected $4,800 for 6 months. This work is already being done and paid for, the proposal is to formalize this and put a limit on how much can be billed for it.
+* [Proposal](https://proposals.decred.org/proposals/2dcbc3e14c06c6e84449f5e2756b944d5ed23be41c23a9f5225f3eef424ce0ae) to offer DCR as a payment option on two travel booking websites ($30k), plus some promotional activities ($21.5k). 
+* [Proposal](https://proposals.decred.org/proposals/3372cfce1218ba81d9c8ca0535cd9dd590f60c92adc068c0089218ae7e3e99e1) to spend $10k on a range of marketing activities (including paid retweets/endorsements and advertisements).
+* [Proposal](https://proposals.decred.org/proposals/4f81031) to create 10 social media memes for 10 DCR/meme.
+* [Proposal](https://proposals.decred.org/proposals/7a67ed5) to host a series of poker games with DCR prizes (300 DCR/month).
+
+Two of these proposals have an issue with DCR-denominated budgets, which keeps cropping up fairly regularly with new proposals.
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
