--- a/journal/202007.md
+++ b/journal/202007.md
@@ -224,9 +224,9 @@ Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 - Binance added both [DCR/BUSD](https://www.binance.com/en/support/articles/fee761e58d684bc3a1c7fc11660ab596) and [DCR/USDT](https://www.binance.com/en/support/articles/043fc71cdcce4fcfbdae133d8d0f35aa) pairs within weeks of each other.
 
-- There have been some community rumblings that [Binance](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw) is about to launch a staking service for DCR. On July 31 Binance [announced](https://www.binance.com/en/support/articles/f73f03d86f1a421fb9afce1221baff2e) that they will be adding "cold staking" although no coins have been annouced yet.
+- There have been some community rumblings that [Binance](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw) is about to launch a staking service for DCR. On July 31 Binance [announced](https://www.binance.com/en/support/articles/f73f03d86f1a421fb9afce1221baff2e) that they will be adding "cold staking" although no coins have been announced yet.
 
-- Binance is about to launch a staking service similar to Kucoin for their Decred users. https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw on the rumour side ? Added a releated news (check above)
+- Binance is about to launch a staking service similar to Kucoin for their Decred users. https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw on the rumour side ? Added related news (check above)
 
 
 
@@ -234,7 +234,7 @@ Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 [@decentralizedbt](https://twitter.com/decentralizedbt/status/1288529718514536449) released a "Decred granade".
 
-[@OfficialCryptos](https://twitter.com/OfficialCryptos/status/1289170923501817859) unvailed flashy looking decred heart stickers.
+[@OfficialCryptos](https://twitter.com/OfficialCryptos/status/1289170923501817859) unveiled flashy looking decred heart stickers.
 
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
@@ -255,7 +255,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 - https://www.forbes.com/sites/cbovaird/2020/07/08/bitcoin-volatility-reached-lowest-since-february-last-month/
 
-The subject of marketing saw considerable discussion on reddit and Matrix. and specifically what role the Treasury of a decentralized project like Decred should play in this.
+The subject of marketing saw a considerable discussion on reddit and Matrix. and specifically what role the Treasury of a decentralized project like Decred should play in this.
 
 @checkmate has been stirring the pot of grassroots outreach and other ideas on reddit, with regular and irregular posts provoking discussion that has also spilled over into some other marketing-related discussion posts. This month's outreach braindroplets:
 
@@ -265,7 +265,7 @@ The subject of marketing saw considerable discussion on reddit and Matrix. and s
 * FTF Jul 17 on the subject of [differentiators](https://www.reddit.com/r/decred/comments/ht4r8a/forward_thinking_friday_differentiators_17_july/), looking at the different ways in which Decred stands out.
 * @Noah shared a braindroplet about a Dapp for transparent governance with Politeia.
 * FTF Jul 24 - Content [amplification](https://www.reddit.com/r/decred/comments/hxblmd/forward_thinking_friday_content_amplification_24/) - cyclical patterns and getting the right messages to the right people.
-* Juiced from Sunday's (lack of) [skepticism](https://www.reddit.com/r/decred/comments/hy4x66/decred_skepticism_sunday_26_july_2020/), on Monday July 27 @checkmate dropped part 2 of the Grassroots Marketing Discussion -  [The Hardest Part](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/). This post set out 3 observations (#1 marketing budgets to date have not performed well, #2 absence of structure and leaders, #3 Treasury creates perverse incentives in marketing). These have struck a chord with many community members (41 comments so far), and even brought Dustorf [back](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzjjg0s) into the mix to share his perspective, and led to Praxis to [reveal](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzffwfy) his new identity. 
+* Juiced from Sunday's (lack of) [skepticism](https://www.reddit.com/r/decred/comments/hy4x66/decred_skepticism_sunday_26_july_2020/), on Monday, July 27 @checkmate dropped part 2 of the Grassroots Marketing Discussion -  [The Hardest Part](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/). This post set out 3 observations (#1 marketing budgets to date have not performed well, #2 absence of structure and leaders, #3 Treasury creates perverse incentives in marketing). These have struck a chord with many community members (41 comments so far), and even brought Dustorf [back](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzjjg0s) into the mix to share his perspective, and led to Praxis to [reveal](https://www.reddit.com/r/decred/comments/hyrq5w/grassroots_marketing_discussion_round_2_the/fzffwfy) his new identity. 
 
 ## Events
 
@@ -301,7 +301,7 @@ Translations:
 Videos:
 
 - Decred bi-Weekly News Update - July 13th, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=yqI5R_WthT4))
-- Decred bi-Weekly News Update - July 31st 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=SwDH0mIAB_w))
+- Decred bi-Weekly News Update - July 31st, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=SwDH0mIAB_w))
 - Decred Webinar: Sociology, The Future of Work and Incentive Alignment hosted by Decred Australia ([youtube](https://www.youtube.com/watch?v=1dcHwap7xHQ))
 - 
 
@@ -317,7 +317,7 @@ Comm systems news:
 
 - { Most Matrix rooms were upgraded to v5 }
 - The #showerthoughts chat room is finally here, the place to unburden yourself of those off the wall ideas. @matheusd insists they be presented fresh from the shower, unburdened by the weight of excessive scrutiny or logic.
-- The Riot desktop client for the Matrix protocol, as well as its developing company New Vecotr, have [rebranded](https://element.io/blog/welcome-to-element/) to Element. The change came with some UI updates too, adding room previews, improved notifications and more { better link }
+- The Riot desktop client for the Matrix protocol, as well as its developing company New Vector, have [rebranded](https://element.io/blog/welcome-to-element/) to Element. The change came with some UI updates too, adding room previews, improved notifications and more { better link }
 - Important [notice](https://element.io/previously-riot) for Riot Desktop users using riot.im (and not chat.decred.org): "For the next few weeks, you can still use Riot on the web at riot.im/app. Please make sure you sign into your account soon to cross-sign your new login session, and ensure you have access to your encrypted messages."
 - First experimental build of P2P Riot for iOS is [published](https://matrix.org/blog/2020/07/10/this-week-in-matrix-2020-07-10#riot-ios-p2p-demo) on TestFlight.
 - RiotX (a from-scratch rewrite of Riot Android) has exited beta (gaining VoIP calls and Widget support) and was also rebranded to Element. { https://element.io/blog/welcome-to-element/ find better link }
