--- a/journal/202007.md
+++ b/journal/202007.md
@@ -357,12 +357,11 @@ Binance [opened](https://www.reddit.com/r/decred/comments/i0gk1i/dcrusdt_on_bina
 
 {DEX}
 
-https://medium.com/@tronblack/ravencoin-post-vulnerability-fix-fb3a4bd70b7b
+Ravencoin was subjected to an [attack](https://medium.com/@tronblack/ravencoin-post-vulnerability-fix-fb3a4bd70b7b) which exploited a protocol bug to print RVN without limit, outside the issuance schedule. The attack was enabled by a one-time pull request from a developer with no other history, and exploited some time after being merged into production releases of the Ravencoin software. Once the vulnerability was announced and the fix released, new attackers emerged to exploit it while the network rushed to update enough miners within the first activation window. Much of the RVN minted by these new attackers was subsequently burned, as at least one of them revealed some personally identifiable information, and the lead Ravencoin developer threatened to (and in fact did) involve law enforcement. The attack was running for some time, minting RVN regularly, mixing it up and selling it - 4% of all the RVN in circulation now as created (and sold) in this manner. As this extra RVN was outside the planned issuance, the RavenCoin community must now decide how to accommodate the extra RVN within the planned issuance limit. The subject was also covered by @BlockCommons on [twitter](https://twitter.com/BlockCommons/status/1281930933889896449).
 
-https://www.theblockcrypto.com/post/72200/coinbase-says-it-prevented-over-1000-customers-from-sending-280000-worth-of-bitcoin-to-twitter-hackers
+When twitter was [hacked](https://www.nytimes.com/2020/07/31/technology/twitter-hack-arrest.html) to circulate a Bitcoin scam, thousands of people rushed to send Elon, Barrack and Kanye their BTC - in the expectation that these celebrities were going to double it for them. Coinbase [prevented](https://www.theblockcrypto.com/post/72200/coinbase-says-it-prevented-over-1000-customers-from-sending-280000-worth-of-bitcoin-to-twitter-hackers) over 1,000 of their customers from making these transactions, demonstrating that perhaps some people might be better off not controlling their own keys.
 
-
-https://twitter.com/Ledger/status/1288372785098764288?s=20
+Hardware wallet producer Ledger [announced](https://twitter.com/Ledger/status/1288372785098764288) that their marketing database had been breached, with 1M email addresses being leaked along with the full names and postal addresses of 9,500 customers.
 
 {relevant exchanges and websites}
 
