--- a/journal/202007.md
+++ b/journal/202007.md
@@ -379,6 +379,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: {}
+- writing and editing: bee, degeri, richardred
 - reviews and feedback: {}
 - title image: {}
