feedback from jholdstock

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -92,7 +92,7 @@ CMS:
 - admin table showing the [status](https://github.com/decred/vspd/pull/149) of each voting wallet
 - API versioning and a few bug fixes
 
-{ anything to add? }
+vspd has now been deployed on testnet by a couple of existing VSP operators, deployment seems to have been straightforward for them and things are working as expected.
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
@@ -179,7 +179,7 @@ There were 7 proposals submitted in July:
 * [Proposal](https://proposals.decred.org/proposals/32cba00b8bb0f41689ca8216e2e14a0e3d91a724c83369b3fcda02490dc119f4) to cover moderation of Matrix, Discord, Telegram and Politeia, max $9,000 expected $4,800 for 6 months. This work is already being done and paid for, the proposal is to formalize this and put a limit on how much can be billed for it.
 * [Proposal](https://proposals.decred.org/proposals/2dcbc3e14c06c6e84449f5e2756b944d5ed23be41c23a9f5225f3eef424ce0ae) to offer DCR as a payment option on two travel booking websites ($30k), plus some promotional activities ($21.5k). 
 * [Proposal](https://proposals.decred.org/proposals/3372cfce1218ba81d9c8ca0535cd9dd590f60c92adc068c0089218ae7e3e99e1) to spend $10k on a range of marketing activities (including paid retweets/endorsements and advertisements).
-* [Proposal](https://proposals.decred.org/proposals/4f81031) to create 10 social media memes for 10 DCR/meme.
+* [Proposal](https://proposals.decred.org/proposals/4f81031) to create 20 social media memes for 10 DCR/meme.
 * [Proposal](https://proposals.decred.org/proposals/7a67ed5) to host a series of poker games with DCR prizes (300 DCR/month).
 
 Two of these proposals have an issue with DCR-denominated budgets, which keeps cropping up fairly regularly with new proposals.
@@ -232,7 +232,7 @@ Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 ### Community shop
 
-[@decentralizedbt](https://twitter.com/decentralizedbt/status/1288529718514536449) released a "Decred granade".
+[@decentralizedbt](https://twitter.com/decentralizedbt/status/1288529718514536449) released a "Decred grenade".
 
 [@OfficialCryptos](https://twitter.com/OfficialCryptos/status/1289170923501817859) unveiled flashy looking decred heart stickers.
 
@@ -382,5 +382,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, richardred
-- reviews and feedback: {}
+- reviews and feedback: jholdstock
 - title image: {}
