Dev feedback from davecgh

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -16,7 +16,7 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 - [exported](https://github.com/decred/dcrd/pull/2243) several `txscript` functions that are independently useful to make the Treasury PR a bit smaller
 - [exported](https://github.com/decred/dcrd/pull/2240) various consensus functions and types as a step to remove all non-consensus code out of the `txscript` package
 - field normalization code [hardened](https://github.com/decred/dcrd/pull/2258) against the possibility of non-constant time operations due to branch prediction (primarily based on a [pull request](https://github.com/btcsuite/btcd/pull/1084) to btcd from 2017). The PR demonstrates a way of detecting non-constant time behavior by _simply_ looking at the assembly output.
-- added handling of [`notfound`](https://github.com/decred/dcrd/pull/2253) peer message (increase peer's ban score and stop requesting blocks and transactions that were not found by it) { did I read it right? }
+- added handling of [`notfound`](https://github.com/decred/dcrd/pull/2253) peer message (if a peer tells it has some data but does not serve it upon request, that peer is very likely misbehaving and gets banned)
 - mining code [moved](https://github.com/decred/dcrd/pull/1965) into `mining` package
 - [`mempool`](https://github.com/decred/dcrd/pull/2274), [`mining`](https://github.com/decred/dcrd/pull/2275) and [`fees`](https://github.com/decred/dcrd/pull/2287) converted from exported modules to internal packages to reduce the maintenance burden. This is part of the overall effort to reduce the total number of modules and eventually get to the point that it will be possible to follow [semantic versioning](https://semver.org/) for the root module.
 - memory usage optimizations in [stake](https://github.com/decred/dcrd/pull/2294) node pruning, txscript [stack](https://github.com/decred/dcrd/pull/2298), trace [logging](https://github.com/decred/dcrd/pull/2301), and [chain tip](https://github.com/decred/dcrd/pull/2302) tracking code
@@ -28,7 +28,7 @@ Commenting on the status of optimizations:
 
 > Flame graph for CPU usage shows pretty clearly that things are being dominated by IO now, so the biggest speedups left will definitely come from that front. ~10% GC, <1% validation, ~3.5% peer I/O, ~55% disk I/O, ~3% profiling cost, ~27% idle, and the rest in minor bits and bobs. ([@davecgh](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$U9ybkey7ppiqGR_K_BagIHwcoyNGTS-H91hEaXzghmI))
 
-{ maybe add summary of module movements }
+> I suggested that we use Schnorr signatures for the Treasury payouts in order to pick up some of the benefits they provide such as smaller signatures and formally provable security. I recently cleaned up the Schnorr code to bring it up to the project's high standards for consensus code and while there are some changes that we want to make to it in the future before switching to it for widespread usage with multi-party signatures among multiple untrusted sources, it is ready for prime time in the context of the Treasury payouts. ([@davecgh](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$yLGDR6WC7v7LTDkNYOLgTXHOozNnVc92xNS8B-0epds))
 
 { maybe add code/contributor stats }
 
@@ -37,8 +37,6 @@ In progress:
 - decentralized Treasury [pull request](https://github.com/decred/dcrd/pull/2170) has more than 300 comments now
 - devs decided to use Schnorr signatures on TSPEND transactions
   - https://twitter.com/marco_peereboom/status/1283168367856300037
-  - https://github.com/decred/dcrd/pull/2170/commits/00c922ae13ce074dfd9050e2698dd1e5451c2f69
-    - { note that commit link may change if rebased }
 
 { Schnorr sounds exciting, any extra info is welcome! (why, how) }
 
@@ -382,5 +380,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, richardred
-- reviews and feedback: jholdstock
+- reviews and feedback: davecgh, jholdstock
 - title image: {}
